Don't compile FSVolumeMount in MoreFilesX. It exists on Mac OS X 10.5 now, we can't re-define it in MoreFilesX. Since we don't use it anyway, just don't ever compile it. b=363092 r=mento sr=wtc