xpcom/MoreFiles/MoreFilesX.h
@@ -1490,10 +1490,14 @@ FSGetVolMountInfo(
 
 #pragma mark FSVolumeMount
 
+// This function exists in Mac OS X 10.5, we cannot re-define it here.
+// We don't use this function, so just don't compile it.
+#if 0
 OSErr
 FSVolumeMount(
 	const void *volMountInfo,
 	FSVolumeRefNum *volRefNum);
+#endif
 
 /*
 	The VolumeMount function mounts a volume using a volume mounting
